fix overflow issue

--- a/docs/app.css
+++ b/docs/app.css
@@ -31,6 +31,8 @@ body {
   background: #e0e5ec;
 }
 .code {
+  width: 100%;
+  overflow-x: scroll;
   padding: 10px;
   margin-bottom: 20px;
   border-radius: 5px;
